--- a/app/assets/javascripts/bike_specs/show.js.erb
+++ b/app/assets/javascripts/bike_specs/show.js.erb
@@ -74,3 +74,7 @@ $('div.basic_info').hide();
       $(this).find('.icon-chevron-up').hide();
     };
   })
+   $('a#share').click(function(){
+    var sharer = "https://www.facebook.com/sharer/sharer.php?u=";
+    window.open(sharer + location.href, 'sharer', 'width=626,height=436');
+  });
