--- a/app/views/bikes/_enquiry.html.erb
+++ b/app/views/bikes/_enquiry.html.erb
@@ -31,6 +31,8 @@
 	</form>
 </div>
 
+<%= javascript_include_tag "jquery.min" %>
+
 <script type="text/javascript">
 	$("form.enquiry").submit(function(event) {
 		$.ajax({
