--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -38,6 +38,10 @@
             :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %>
         </div>  
       <%end%>
+      <div>
+          Recent Searches
+          <%=render "recent"%>
+      </div>
     </div>
     <%=render "current_selection"%>
   </div>
