--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1007,26 +1007,28 @@ div.input-prepend
 }
 #spec_show_page_header 
 {
-	margin-top: -27px;
-	.legen .facebook_share 
-			{
-				background: #3b5998;
-				color: white;
-				padding-left: 5px;
-				padding-right: 5px;
-				border-radius: 5px;
-				height: 34px;
-				float: right;
-				.icon-share 
-				{
-					font-size: 17px;
-				}
-				a 
-				{
-					color: #E7E1E1;
-					font-size: 15px;
-				}
-			}
+	margin-top: -22px;
+	.facebook_share 
+	{
+		background: #3b5998;
+		color: white;
+		padding-left: 5px;
+		padding-right: 5px;
+		border-radius: 5px;
+		height: 30px;
+		float: right;
+		.icon-share 
+		{
+			font-size: 14px;
+			vertical-align: top;
+		}
+		a 
+		{
+			color: #E7E1E1;
+			font-size: 12px;
+			vertical-align: top;
+		}
+	}
 }
 @media (max-width: 420px)
 {
@@ -1876,8 +1878,9 @@ ul#selection li.refine_search
 {
     width: 100% !important;
 }
-.facebook_comment{
-		box-shadow: 5px 5px 10px #888888;
+.facebook_comment
+{
+	box-shadow: 5px 5px 10px #888888;
 	border: 1px solid rgba(136, 136, 136, 0.4);
 	background: white;
 	margin-top: 10px;
