--- a/app/views/bike_specs/_search_bikes.html.erb
+++ b/app/views/bike_specs/_search_bikes.html.erb
@@ -8,7 +8,9 @@
             <% if bike.pictures.empty?%>
             <%=image_tag "default_image.jpg"%>
             <%else%>
-            <%= image_tag bike.pictures.last.file.url(:original), alt: bike.year.to_s+" "+bike.make+" "+bike.model+" "+bike.variant, title: bike.year.to_s+" "+bike.make+" "+bike.model+" "+bike.variant, class: "bike_picture" %>
+            <%var= bike.variant if bike.variant != "N/A"%>
+            <%title = [bike.year.to_s,bike.make,bike.model,var].join(" ")%>  
+            <%= image_tag bike.pictures.last.file.url(:original), alt: title, title: title, class: "bike_picture" %>
             <%end%>
           </div> <!-- span5 Image of the searched bike --> 
           <div class= "span7">
