--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -1,122 +1,121 @@
 <!--Indentation Complete-->
 <% cache do %>
-    <div class= "showroom_header">New Bike Showroom</div>
-    <div class= "showroom_search">
-        <%=form_tag(search_bike_specs_path, :method => "get") do %>
-        <div class = "legen">Search Bikes</div>
-          <div class = "row">
-            <div class= "span3">
-              <div  class="input-prepend">
-                <span class="add-on">Make: </span>
-                <%= select_tag "make", options_for_select(@makes.sort), :prompt => "Any Make", :class=>"input-drop-down" %>
-              </div>
-            </div>
-            <div class= "span3">
-              <div  class="input-prepend">
-                <span class="add-on">Model: </span>     
-                <%= select_tag "model", options_for_select(@models.sort), :prompt => "Any Model", :class=>"input-drop-down" %>
-              </div>
-            </div>
-            <div class= "span3">
-              <div  class="input-prepend">
-                <span class="add-on">Body: </span>     
-                <%= select_tag :body, options_for_select(['Any Type',"Cruiser", "Scooter", "Sports", "Super Sport", "Standard", "Trail"]),:class=>"input-drop-down" %>
-              </div>
-            </div>
-            <div class= "span2">
-              <input class="btn btn-primary" name="commit" type="submit" value="Search" >
-            </div>
+  <div class= "showroom_header">New Bike Showroom</div>
+  <div class= "showroom_search">
+    <%=form_tag(search_bike_specs_path, :method => "get") do %>
+      <div class = "legen">Search Bikes</div>
+      <div class = "row">
+        <div class= "span3">
+          <div  class="input-prepend">
+            <span class="add-on">Make: </span>
+            <%= select_tag "make", options_for_select(@makes.sort), :prompt => "Any Make", :class=>"input-drop-down" %>
           </div>
-        <%end%>
-    </div>
+        </div>
+        <div class= "span3">
+          <div  class="input-prepend">
+            <span class="add-on">Model: </span>     
+            <%= select_tag "model", options_for_select(@models.sort), :prompt => "Any Model", :class=>"input-drop-down" %>
+          </div>
+        </div>
+        <div class= "span3">
+          <div  class="input-prepend">
+            <span class="add-on">Body: </span>     
+            <%= select_tag :body, options_for_select(['Any Type',"Cruiser", "Scooter", "Sports", "Super Sport", "Standard", "Trail"]),:class=>"input-drop-down" %>
+          </div>
+        </div>
+        <div class= "span2">
+          <input class="btn btn-primary" name="commit" type="submit" value="Search" >
+        </div>
+      </div>
+    <%end%>
+  </div>
 
   <div class = "row">
     <div class = "span4 showroom_browse">
       <div class = "legen">Browse by body type</div>
       <div class= "browse_body_type">
-        
-          <a href = '<%=bike_specs_path(body: "Cruiser")%>' title ="Bike Showroom Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
-          <a href = '<%=bike_specs_path(body: "Scooter")%>' title ="Bike Showroom Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
-        
-        
-          <a href = '<%=bike_specs_path(body: "Sports")%>' title ="Bike Showroom Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
-          <a href = "<%=bike_specs_path(body: 'Super Sport')%>" title ="Bike Showroom Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
-        
-        
-          <a href = '<%=bike_specs_path(body: "Standard")%>' title ="Bike Showroom Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
-          <a href = '<%=bike_specs_path(body: "Trail")%>' title ="Bike Showroom Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
-         
+      
+        <a href = '<%=bike_specs_path(body: "Cruiser")%>' title ="Bike Showroom Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
+        <a href = '<%=bike_specs_path(body: "Scooter")%>' title ="Bike Showroom Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
+      
+      
+        <a href = '<%=bike_specs_path(body: "Sports")%>' title ="Bike Showroom Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
+        <a href = "<%=bike_specs_path(body: 'Super Sport')%>" title ="Bike Showroom Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
+      
+      
+        <a href = '<%=bike_specs_path(body: "Standard")%>' title ="Bike Showroom Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
+        <a href = '<%=bike_specs_path(body: "Trail")%>' title ="Bike Showroom Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
+       
       </div> 
     </div>
     <div class = "span4 showroom_browse">
       <div class = "legen">Browse By: Makers</div>
-        <div class= "browse_maker">
-            
-          <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "64x64"%></div></a>
-          
-          <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hartford")%>' title ="Bike Showroom Hartford"><div class= "image_border"><%= image_tag "hartford.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "64x64"%></div></a>
-          
-          <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "64x64"%></div></a>
-          
-          <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Piaggio")%>' title ="Bike Showroom Piaggio"><div class= "image_border"><%= image_tag "piaggio.jpg", size: "64x64"%></div></a>
-          
-          <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Rieju")%>' title ="Bike Showroom Rieju"><div class= "image_border"><%= image_tag "rieju.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "64x64"%></div></a>
-          
-          <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "64x64"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "64x64"%></div></a>
-           
-        </div>  
-      </div>
-    <% end%>
-    <div class = "span4">
-      <div class=  "latest_bikes">
-      <div class = "legen">Latest Bikes</div>
-        <div class= "browse_maker">
-          
-            <%@latest_bike.each do |bike|%>
-            <%var= bike.variant if bike.variant != "N/A"%>
-                    <%title = [bike.year.to_s,bike.make,bike.model,var].join(" ")%>
-                    <% if !bike.pictures.last.nil?%>
-                    
-
-                    <a href = '<%=bike_spec_path(bike)%>' title ='<%= title%>'>
-                      <div class= "image_border">
-                        <%=image_tag bike.pictures.last.file.url(:thumb), size: "100x100", alt: title, title: title%>
-                      </div>
-                    </a>
-                    <%else%>
-                    <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag "default_image.jpg", size: "100x100"%></div></a>
-                    <%end%>
-                    <a href = '<%=bike_spec_path(bike)%>'><%= title%></a>
-            <%end%>      
-           
-        </div>  
+      <div class= "browse_maker">
       
+        <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "64x64"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hartford")%>' title ="Bike Showroom Hartford"><div class= "image_border"><%= image_tag "hartford.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "64x64"%></div></a>
+        
+        <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "64x64"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Piaggio")%>' title ="Bike Showroom Piaggio"><div class= "image_border"><%= image_tag "piaggio.jpg", size: "64x64"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Rieju")%>' title ="Bike Showroom Rieju"><div class= "image_border"><%= image_tag "rieju.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "64x64"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "64x64"%></div></a>
+         
+      </div>  
     </div>
-    <!--
-    <div class= "showroom_facebook">
-      <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
+<% end%>
+
+  <div class = "span4">
+    <div class=  "latest_bikes">
+    <div class = "legen">Latest Bikes</div>
+    <div class= "browse_maker">
+        <%@latest_bike.each do |bike|%>
+          <%var= bike.variant if bike.variant != "N/A"%>
+          <%title = [bike.year.to_s,bike.make,bike.model,var].join(" ")%>
+          <% if !bike.pictures.last.nil?%>
+            <a href = '<%=bike_spec_path(bike)%>' title ='<%= title%>'>
+            <div class= "image_border">
+              <%=image_tag bike.pictures.last.file.url(:thumb), size: "100x100", alt: title, title: title%>
+            </div>
+            </a>
+          <%else%>
+            <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag "default_image.jpg", size: "100x100"%></div></a>
+          <%end%>
+          <a href = '<%=bike_spec_path(bike)%>'><%= title%></a>
+          <%end%>      
+        </div>  
       </div>
+      <!--
+      <div class= "showroom_facebook">
+        <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
+        </div>
+      </div>
+      -->
     </div>
-  -->
   </div>
-</div>
-<div class = "facebook_comment">
-  <div class= "legen">
-    Comments:
+  <div class = "facebook_comment">
+    <div class= "legen">
+      Comments:
+    </div>
+    <div class="fb-comments" data-href="http://bikes.bechnu.com/showroom/" data-width="300" data-num-posts="10">
+    </div>
   </div>
-<div class="fb-comments" data-href="http://bikes.bechnu.com/showroom/" data-width="300" data-num-posts="10"></div></div>
+
 <%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
   $('select#make').change(function() 
@@ -145,7 +144,6 @@
       {
         url: "<%=change_model_bike_specs_path%>",
         data: {make:str },
-        success:console.log("test"),
       });
     };
   });
