--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -666,6 +666,15 @@ div.input-prepend
 .results_main_page_sub 
 {
 	margin-bottom: -15px;
+	h2 a
+	{
+		color: #0088cc;
+	}
+	h2 a:hover
+	{
+		background: inherit;
+		color: #0088cc;
+	}
 }
 
 @media (min-width: 100px) and (max-width:360px)
@@ -1250,6 +1259,11 @@ div.search_result_div a
 	text-decoration: underline;
 	background: transparent;
 	color: black;
+}
+.nav-collapse .nav > li a
+{
+	font-weight: bold;
+	font-size: 15px;
 }
 
 @media (min-width: 479px) (max-width: 979px)
