--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -53,10 +53,11 @@
     <div class = "main_page_facebook">
       <div id= "facebook_page" class= "span4">
         <div class = "facebook_share" >
-        <a id = "share" style="cursor:pointer" title= " Share on Facebook">
-          <div class = "icon-share"> </div> Share on Facebook
-        </a>
-        <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" data-width="240" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+          <a id = "share" style="cursor:pointer" title= " Share on Facebook">
+            <div class = "icon-share"> </div> Share on Facebook
+          </a>
+          <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" data-width="240" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+        </div>  
       </div>
     </div>
   </div><!--row-->
