--- a/app/views/bikes/_new_bike.html.erb
+++ b/app/views/bikes/_new_bike.html.erb
@@ -1,7 +1,7 @@
 <!--Indentation Complete-->
 <div class = "results_main_page">
   <div class= "results_main_page_sub">
-    <h2>New Bikes</h2>
+    <h2><a href= "<%=showroom_bike_specs_path %>">Bike Showroom</a></h2>
     <table class= "new_bike_make_table">
      	<tr>
     		<td>
