--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -662,6 +662,10 @@ div.input-prepend
 		color: #ff6600;
 		text-decoration: none;
 	}
+	.legen
+	{
+		margin-left: 6px;
+	}
 }
 .results_main_page_sub 
 {
