--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -30,7 +30,7 @@
 		<input class = "btn btn-primary "type="submit">
 	</form>
 </div>
-
+<%= javascript_include_tag "jquery.min" %>
 <script type="text/javascript">
 	$("form.enquiry").submit(function(event) {
 	  	$.ajax({
