loader.gif size

--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -60,7 +60,7 @@
                         <%end%>
                         
                         <div class = "loading">
-                            <%= image_tag 'loader.gif'%> Loading...
+                            <%= image_tag 'loader.gif', size: "16x16"%> Loading...
                         </div>
                     </div><!--div bike sort-->
                 </div><!--div results -->
