--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -105,7 +105,7 @@
               <div class = "<%= i%>"></div>
             <%end%>
             <div class = "loading">
-                <%= image_tag 'loader.gif'%> Loading...
+                <%= image_tag 'loader.gif', size: "16x16"%> Loading...
             </div>
           </div><!--div bike sort-->
         </div><!--div results -->
